--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -20,6 +20,12 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.lorislab.armonitor</groupId>
+			<artifactId>armonitor-jira-client</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<!-- EJB -->
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
