--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -19,13 +19,23 @@
 			<artifactId>ejb</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.lorislab.jel</groupId>
+			<artifactId>base</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.lorislab.armonitor</groupId>
 			<artifactId>armonitor-jira-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.lorislab.armonitor</groupId>
+			<artifactId>armonitor-agent-rs</artifactId>
+			<version>${project.version}</version>
+			<classifier>rsclient</classifier>
+		</dependency>
+				
 		<!-- EJB -->
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
@@ -65,6 +75,12 @@
 			<artifactId>cdi-api</artifactId>			
 			<scope>provided</scope>
 		</dependency>
+        <!-- JMS -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.jms</groupId>
+            <artifactId>jboss-jms-api_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>		
 	</dependencies>
 	
 	<build>
