--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,14 @@
 
 	<dependencyManagement>       
 		<dependencies>
-            <!-- EJB/Persistence libraries -->
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-6.0</artifactId>
-                <version>3.0.1.Final</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>			
+			<!-- EJB/Persistence libraries -->
+			<dependency>
+				<groupId>org.jboss.spec</groupId>
+				<artifactId>jboss-javaee-6.0</artifactId>
+				<version>3.0.1.Final</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>			
 			<!-- JBOSS -->     
 			<dependency>
 				<groupId>org.jboss.msc</groupId>
@@ -268,6 +268,34 @@
 			</snapshots>
 		</repository>		            
 	</repositories>
+
+	<profiles>
+		<!-- Hibernate HBM2DDL -->
+		<profile>
+			<id>schema</id>           
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+					</resource>
+				</resources>
+				<plugins>
+					<plugin>
+						<groupId>de.smartics.maven.plugin</groupId>
+						<artifactId>hibernate4-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>export</id>
+								<goals>
+									<goal>hbm2ddl</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>                                  
+				</plugins>                
+			</build>                    
+		</profile> 		
+	</profiles>
 
 	<pluginRepositories>
 		<pluginRepository>
