--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -35,7 +35,13 @@
 			<version>${project.version}</version>
 			<classifier>rsclient</classifier>
 		</dependency>
-				
+		<dependency>
+			<groupId>org.lorislab.armonitor</groupId>
+			<artifactId>armonitor-rs</artifactId>
+			<version>${project.version}</version>
+			<classifier>rsclient</classifier>
+		</dependency>
+						
 		<!-- EJB -->
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
