--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<module>armonitor-agent-web</module>
 		<module>armonitor-jira-client</module>
 		<module>armonitor-scm-svn-client</module>		
+		<module>armonitor-rs</module>
 		<module>armonitor-web</module>
 	</modules>
 
@@ -196,7 +197,6 @@
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>2.4</version>
 					<configuration>
