--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,23 @@
 		<module>armonitor-jira-client</module>
 		<module>armonitor-scm-svn-client</module>		
 		<module>armonitor-rs</module>
+		<module>armonitor-mail</module>
 		<module>armonitor-web</module>
 	</modules>
 
 	<dependencyManagement>       
 		<dependencies>
+			<!-- JEL -->
+			<dependency>
+				<groupId>org.lorislab.jel</groupId>
+				<artifactId>ejb</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>			
+			<dependency>
+				<groupId>org.lorislab.jel</groupId>
+				<artifactId>base</artifactId>				
+				<version>1.0.0-SNAPSHOT</version>
+			</dependency>			
 			<!-- EJB/Persistence libraries -->
 			<dependency>
 				<groupId>org.jboss.spec</groupId>
@@ -117,7 +129,13 @@
 				<artifactId>hibernate-jpamodelgen</artifactId>
 				<version>1.2.0.Final</version>
 				<scope>provided</scope>
-			</dependency>						 				
+			</dependency>
+			<!-- MAIL -->
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>2.3.20</version>
+			</dependency>									 				
 		</dependencies>
 	</dependencyManagement>    
     
@@ -142,6 +160,14 @@
 		</plugins>    
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-ejb-plugin</artifactId>
+					<version>2.3</version>
+					<configuration>
+						<ejbVersion>3.1</ejbVersion>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>de.smartics.maven.plugin</groupId>
 					<artifactId>hibernate4-maven-plugin</artifactId>
