--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<server.home.dir>${JBOSS_ARMONITOR_HOME}</server.home.dir>		
+		<jel.version>0.0.3</jel.version>
 	</properties>
 
 	<licenses>
@@ -39,6 +40,7 @@
 	</developers>
 		
 	<modules>
+		<module>armonitor-maven-plugin</module>
 		<module>armonitor-agent</module>
 		<module>armonitor-agent-impl</module>
 		<module>armonitor-agent-rs</module>
@@ -56,12 +58,12 @@
 			<dependency>
 				<groupId>org.lorislab.jel</groupId>
 				<artifactId>ejb</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${jel.version}</version>
 			</dependency>			
 			<dependency>
 				<groupId>org.lorislab.jel</groupId>
 				<artifactId>base</artifactId>				
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${jel.version}</version>
 			</dependency>			
 			<!-- EJB/Persistence libraries -->
 			<dependency>
@@ -103,7 +105,7 @@
 				<groupId>org.jboss.resteasy</groupId>
 				<artifactId>resteasy-jackson-provider</artifactId>
 				<version>2.3.5.Final</version>
-			</dependency>              
+			</dependency> 
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
@@ -152,10 +154,9 @@
 			</plugin>  
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
-			</plugin>  
+			</plugin>
 			<plugin>
-				<groupId>org.lorislab.maven.plugins</groupId>
-				<artifactId>maven-armonitor-plugin</artifactId>				
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>       
 		</plugins>    
 		<pluginManagement>
@@ -201,9 +202,9 @@
 					</configuration>
 				</plugin>                          				
 				<plugin>
-					<groupId>org.lorislab.maven.plugins</groupId>
-					<artifactId>maven-armonitor-plugin</artifactId>
-					<version>1.0.0-SNAPSHOT</version>
+					<groupId>org.lorislab.armonitor</groupId>
+					<artifactId>armonitor-maven-plugin</artifactId>
+					<version>${project.version}</version>
 					<executions>
 						<execution>
 							<phase>prepare-package</phase>
@@ -215,7 +216,7 @@
 				</plugin>											
 				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.4.1</version>
+					<version>2.4.2</version>
 					<configuration>
 						<useReleaseProfile>false</useReleaseProfile>
 						<releaseProfiles>release</releaseProfiles>
@@ -238,15 +239,20 @@
 					<artifactId>maven-source-plugin</artifactId>
 					<version>2.2.1</version>
 					<inherited>true</inherited>
-					<executions>
-						<execution>
-							<id>attach-sources</id>
-							<goals>
-								<goal>jar</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>                
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<inherited>true</inherited>
+					<configuration>
+						<aggregate>true</aggregate>
+						<links>
+							<link>http://java.sun.com/javase/7/docs/api/</link>
+							<link>http://java.sun.com/javaee/6/docs/api/</link>
+						</links>
+					</configuration>
+				</plugin>				                
 				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.3</version>
@@ -269,6 +275,13 @@
 		</pluginManagement>
 	</build>
     
+	<distributionManagement>
+		<repository>
+			<id>bintray</id>
+			<url>https://api.bintray.com/maven/lorislab/maven/armonitor</url>
+		</repository>
+	</distributionManagement>
+		
 	<!-- Repositories -->
 	<repositories>
 		<repository>
@@ -285,7 +298,7 @@
 		</repository>   
 		<repository>
 			<id>lorislab</id>
-			<url>http://dl.bintray.com/lorislab/maven/release</url>
+			<url>http://dl.bintray.com/lorislab/maven</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -296,6 +309,35 @@
 	</repositories>
 
 	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-source-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>		
 		<!-- Hibernate HBM2DDL -->
 		<profile>
 			<id>schema</id>           
@@ -338,7 +380,7 @@
 		</pluginRepository>  		
 		<pluginRepository>
 			<id>lorislab-plugins</id>
-			<url>http://dl.bintray.com/lorislab/maven/release</url>
+			<url>http://dl.bintray.com/lorislab/maven</url>
 			<layout>default</layout>
 			<releases>
 				<updatePolicy>never</updatePolicy>
