--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -38,11 +38,6 @@
 			<artifactId>armonitor-rs</artifactId>
 			<version>${project.version}</version>
 			<classifier>rsclient</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.lorislab.armonitor</groupId>
-			<artifactId>armonitor-mail</artifactId>
-			<version>${project.version}</version>
 		</dependency>				
 		<!-- EJB -->
 		<dependency>
@@ -66,11 +61,6 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson-provider</artifactId>
-			<scope>provided</scope>
 		</dependency>		
 		
 		<dependency>
@@ -89,6 +79,15 @@
             <artifactId>jboss-jms-api_1.1_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+		<!-- MAIL -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+		</dependency>		
 	</dependencies>
 	
 	<build>
