--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,15 @@
 				<groupId>org.lorislab.jel</groupId>
 				<artifactId>base</artifactId>				
 				<version>${jel.version}</version>
-			</dependency>			
+			</dependency>	
+			<!-- RESTEASY -->
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-bom</artifactId>
+				<version>2.3.5.Final</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>					
 			<!-- EJB/Persistence libraries -->
 			<dependency>
 				<groupId>org.jboss.spec</groupId>
@@ -93,18 +101,7 @@
 				<version>1.1</version>
 				<scope>provided</scope>
 			</dependency> 		
-			<!-- RESTEASY -->
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-jaxrs</artifactId>
-				<version>2.3.5.Final</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-jackson-provider</artifactId>
-				<version>2.3.5.Final</version>
-			</dependency> 
+			<!-- SERVLET -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
