--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -24,12 +24,12 @@
 		</dependency>		
 		<dependency>
 			<groupId>org.lorislab.armonitor</groupId>
-			<artifactId>armonitor-jira-client</artifactId>
+			<artifactId>armonitor-bts</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.lorislab.armonitor</groupId>
-			<artifactId>armonitor-scm-svn-client</artifactId>
+			<artifactId>armonitor-scm</artifactId>
 			<version>${project.version}</version>
 		</dependency>		
 		<dependency>
@@ -67,7 +67,11 @@
 			<artifactId>resteasy-jaxrs</artifactId>
 			<scope>provided</scope>
 		</dependency>		
-		
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<scope>provided</scope>			
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -78,12 +82,12 @@
 			<artifactId>cdi-api</artifactId>			
 			<scope>provided</scope>
 		</dependency>
-        <!-- JMS -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.jms</groupId>
-            <artifactId>jboss-jms-api_1.1_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
+		<!-- JMS -->
+		<dependency>
+			<groupId>org.jboss.spec.javax.jms</groupId>
+			<artifactId>jboss-jms-api_1.1_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- MAIL -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
@@ -92,6 +96,7 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
+			<scope>provided</scope>
 		</dependency>		
 	</dependencies>
 	
@@ -101,8 +106,8 @@
 			<plugin>
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>                
-			</plugin>                           
-		</plugins>		
+			</plugin> 
+		</plugins>
 	</build>  
 	
 	<profiles>
