--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 		<module>armonitor-agent-impl</module>
 		<module>armonitor-agent-rs</module>
 		<module>armonitor-agent-web</module>
-		<module>armonitor-jira-client</module>
-		<module>armonitor-scm-svn-client</module>		
+		<module>armonitor-bts</module>
+		<module>armonitor-scm</module>		
 		<module>armonitor-rs</module>
 		<module>armonitor-web</module>
 	</modules>
@@ -133,7 +133,31 @@
 				<groupId>org.freemarker</groupId>
 				<artifactId>freemarker</artifactId>
 				<version>2.3.20</version>
-			</dependency>									 				
+			</dependency>
+			<!-- SVN -->
+			<dependency>
+				<groupId>org.tmatesoft.svnkit</groupId>
+				<artifactId>svnkit</artifactId>
+				<version>1.3.8</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>trilead-ssh2</artifactId>
+						<groupId>com.trilead</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>sqljet</artifactId>
+						<groupId>org.tmatesoft.sqljet</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>sequence-library</artifactId>
+						<groupId>de.regnis.q.sequence</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jna</artifactId>
+						<groupId>net.java.dev.jna</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>												 				
 		</dependencies>
 	</dependencyManagement>    
     
@@ -280,6 +304,16 @@
 		
 	<!-- Repositories -->
 	<repositories>
+		<repository>
+			<id>svnkit</id>
+			<url>http://maven.tmatesoft.com/content/repositories/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>		
 		<repository>
 			<id>jboss-public-repository-group</id>
 			<name>JBoss Public Maven Repository Group</name>
