--- a/armonitor-agent-rs/pom.xml
+++ b/armonitor-agent-rs/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.lorislab.armonitor</groupId>
 		<artifactId>armonitor</artifactId>
-		<version>0.0.1</version>	
+		<version>0.0.2-SNAPSHOT</version>	
 		<relativePath>../</relativePath>		
 	</parent>
 	
