--- a/armonitor-bts/pom.xml
+++ b/armonitor-bts/pom.xml
@@ -18,8 +18,13 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<scope>compile</scope>
+		</dependency>		
 		<!-- JIRA-JAXRS -->
 		<dependency>
 			<groupId>org.lorislab.jira</groupId>
