--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -97,7 +97,13 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>	
+		<!-- SERVLER -->
+		<dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.0_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>	
 	</dependencies>
 	
 	<build>
