--- a/armonitor-web/src/main/webapp/font/config.json
+++ b/armonitor-web/src/main/webapp/font/config.json
@@ -7,154 +7,76 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "2a6740fc2f9d0edea54205963f662594",
-      "css": "spin3",
+      "uid": "12f4ece88e46abd864e40b35e05b11cd",
+      "css": "ok",
       "code": 59393,
-      "src": "fontelico"
-    },
-    {
-      "uid": "5d2d07f112b8de19f2c0dbfec3e42c05",
-      "css": "spin5",
-      "code": 59392,
-      "src": "fontelico"
-    },
-    {
-      "uid": "cd21cbfb28ad4d903cede582157f65dc",
-      "css": "bell-1",
-      "code": 59415,
       "src": "fontawesome"
     },
     {
-      "uid": "671f29fa10dda08074a4c6a341bb4f39",
-      "css": "bell-alt",
-      "code": 59416,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "56a21935a5d4d79b2e91ec00f760b369",
-      "css": "sort",
-      "code": 59411,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "94103e1b3f1e8cf514178ec5912b4469",
-      "css": "sort-down",
-      "code": 59412,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "65b3ce930627cabfb6ac81ac60ec5ae4",
-      "css": "sort-up",
-      "code": 59413,
-      "src": "fontawesome"
-    },
-    {
-      "uid": "7222571caa5c15f83dcfd447c58d68d9",
-      "css": "search",
-      "code": 59407,
-      "src": "entypo"
-    },
-    {
-      "uid": "2cfb3f2b46b34a1790aec0aa846297b6",
-      "css": "menu",
-      "code": 59410,
-      "src": "entypo"
-    },
-    {
-      "uid": "14017aae737730faeda4a6fd8fb3a5f0",
-      "css": "check",
+      "uid": "e82cedfa1d5f15b00c5a81c9bd731ea2",
+      "css": "info-circled",
       "code": 59398,
-      "src": "entypo"
+      "src": "fontawesome"
     },
     {
-      "uid": "63b86fedd4ee9ad2105f54f4888e7088",
-      "css": "info",
-      "code": 59404,
-      "src": "entypo"
-    },
-    {
-      "uid": "513ac180ff85bd275f2b736720cbbf5e",
-      "css": "home",
-      "code": 59394,
-      "src": "entypo"
-    },
-    {
-      "uid": "b08cfe8039de2ce815686aced2caef06",
-      "css": "download",
-      "code": 59403,
-      "src": "entypo"
-    },
-    {
-      "uid": "2c5335c6e56b876139d7a58ab2f4b2fe",
-      "css": "bell",
-      "code": 59414,
-      "src": "entypo"
-    },
-    {
-      "uid": "97902f87200ce74d181044df02a0458d",
-      "css": "attention",
-      "code": 59402,
-      "src": "entypo"
-    },
-    {
-      "uid": "39a5a0d7ce8342d149373b2ce219503a",
-      "css": "alert",
-      "code": 59401,
-      "src": "entypo"
-    },
-    {
-      "uid": "457c8e2b305e7af74c1be4f07a01ca92",
-      "css": "vcard",
+      "uid": "7034e4d22866af82bef811f52fb1ba46",
+      "css": "code",
       "code": 59396,
-      "src": "entypo"
+      "src": "fontawesome"
     },
     {
-      "uid": "2626e3a1bbcd90e45849af3b58a1d594",
-      "css": "trash",
+      "uid": "c76b7947c957c9b78b11741173c8349b",
+      "css": "attention",
+      "code": 59394,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "0d08dbb1dd648a43bdea81b7e6c9e036",
+      "css": "location",
       "code": 59399,
-      "src": "entypo"
+      "src": "fontawesome"
     },
     {
-      "uid": "bc64550dd022ce21604f97309b346cea",
-      "css": "cog",
-      "code": 59409,
-      "src": "entypo"
-    },
-    {
-      "uid": "bb46b15cb78cc4cc05d3d715d522ac4d",
-      "css": "cw",
-      "code": 59397,
-      "src": "entypo"
-    },
-    {
-      "uid": "3bd18d47a12b8709e9f4fe9ead4f7518",
-      "css": "arrows-ccw",
-      "code": 59400,
-      "src": "entypo"
-    },
-    {
-      "uid": "e188c02f740feff7e2d2bce1950b75fa",
-      "css": "record",
-      "code": 59408,
-      "src": "entypo"
-    },
-    {
-      "uid": "97bd5542ed3e143d2ee9b60e14487615",
-      "css": "list-add",
-      "code": 59406,
-      "src": "entypo"
-    },
-    {
-      "uid": "b7a336095aa4535c3689cb557edf23db",
-      "css": "monitor",
+      "uid": "598a5f2bcf3521d1615de8e1881ccd17",
+      "css": "clock",
       "code": 59395,
-      "src": "entypo"
+      "src": "fontawesome"
     },
     {
-      "uid": "e8239f8188c76c925be4bd1bbcc013ac",
-      "css": "erase",
-      "code": 59405,
-      "src": "entypo"
+      "uid": "19b04848ae7332d2c0ea2a9e19064037",
+      "css": "right-circled",
+      "code": 59392,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "a73c5deb486c8d66249811642e5d719a",
+      "css": "arrows-cw",
+      "code": 59400,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "bc4b94dd7a9a1dd2e02f9e4648062596",
+      "css": "fork",
+      "code": 59401,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "8aa99bc60f3553bb3e31b73dd6e744c8",
+      "css": "rocket",
+      "code": 59402,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "0f444c61b0d2c9966016d7ddb12f5837",
+      "css": "beaker",
+      "code": 59403,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "0bda4bc779d4c32623dec2e43bd67ee8",
+      "css": "gauge",
+      "code": 59397,
+      "src": "fontawesome"
     }
   ]
 }
