--- a/armonitor-web/src/main/webapp/WEB-INF/web.xml
+++ b/armonitor-web/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,34 @@
 		 version="3.0">
 	
 	<security-constraint>
-		<display-name>Restricted GET To Employees</display-name>
+		<display-name>Administrator</display-name>
 		<web-resource-collection>
-			<web-resource-name>Restricted Access - Get Only</web-resource-name>
-			<url-pattern>/restricted/employee/*</url-pattern>
+			<web-resource-name>Restricted Access - Administrator HTML</web-resource-name>
+			<url-pattern>/partials/admin/*</url-pattern>
 			<http-method>GET</http-method>
 		</web-resource-collection>
+		<web-resource-collection>
+			<web-resource-name>Restricted Access - Administrator RS</web-resource-name>
+			<url-pattern>/rs/ad/*</url-pattern>		
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+		<user-data-constraint>
+			<transport-guarantee>NONE</transport-guarantee>
+		</user-data-constraint>		
+	</security-constraint>
+	<security-constraint>
+		<display-name>Profile</display-name>
+		<web-resource-collection>
+			<web-resource-name>Restricted Access - Profile HTML</web-resource-name>
+			<url-pattern>/partials/profile.html</url-pattern>
+			<http-method>GET</http-method>
+		</web-resource-collection>
+		<web-resource-collection>
+			<web-resource-name>Restricted Access - Profile RS</web-resource-name>
+			<url-pattern>/rs/sec/pr/*</url-pattern>			
+		</web-resource-collection>		
 		<auth-constraint>
 			<role-name>base</role-name>
 		</auth-constraint>
@@ -18,7 +40,11 @@
 			<transport-guarantee>NONE</transport-guarantee>
 		</user-data-constraint>
 	</security-constraint>	
+	
 	<security-role>
 		<role-name>base</role-name>
-	</security-role>	
+	</security-role>
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>		
 </web-app>
