--- a/armonitor-web/src/main/webapp/font/config.json
+++ b/armonitor-web/src/main/webapp/font/config.json
@@ -7,6 +7,12 @@
   "ascent": 850,
   "glyphs": [
     {
+      "uid": "ccc2329632396dc096bb638d4b46fb98",
+      "css": "mail-alt",
+      "code": 59409,
+      "src": "fontawesome"
+    },
+    {
       "uid": "8b80d36d4ef43889db10bc1f0dc9a862",
       "css": "user",
       "code": 59399,
@@ -40,6 +46,12 @@
       "uid": "f5999a012fc3752386635ec02a858447",
       "css": "download-cloud",
       "code": 59404,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "d35a1d35efeb784d1dc9ac18b9b6c2b6",
+      "css": "pencil",
+      "code": 59410,
       "src": "fontawesome"
     },
     {
@@ -82,6 +94,12 @@
       "uid": "a73c5deb486c8d66249811642e5d719a",
       "css": "arrows-cw",
       "code": 59400,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "f4445feb55521283572ee88bc304f928",
+      "css": "floppy",
+      "code": 59411,
       "src": "fontawesome"
     },
     {
