--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -16,12 +16,20 @@
 	<dependencies>  	
 		<dependency>
 			<groupId>org.lorislab.jel</groupId>
-			<artifactId>ejb</artifactId>
+			<artifactId>jel-ejb</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.lorislab.jel</groupId>
-			<artifactId>base</artifactId>
+			<artifactId>jel-base</artifactId>
 		</dependency>		
+		<dependency>
+			<groupId>org.lorislab.jel</groupId>
+			<artifactId>jel-cdi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.lorislab.jel</groupId>
+			<artifactId>jel-rs</artifactId>
+		</dependency>			
 		<dependency>
 			<groupId>org.lorislab.armonitor</groupId>
 			<artifactId>armonitor-bts</artifactId>
@@ -107,7 +115,67 @@
 			<plugin>
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>                
-			</plugin> 
+			</plugin>
+			<!--
+			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>replacer</artifactId>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>                    
+					</execution>
+				</executions>
+				<configuration>
+					<regex>true</regex>
+					<regexFlags><regexFlag>DOTALL</regexFlag></regexFlags>
+					<file>${basedir}/src/main/webapp/index.html</file>
+					<outputFile>target/armonitor/index.html</outputFile>
+					<tokenValueMap>${basedir}/src/config/tokens.conf</tokenValueMap>
+				</configuration>				
+			</plugin>			 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<warSourceExcludes>lib/**/*.map,lib/**/*.txt,lib/**/*.json,js/*.js,css/*.css,index.html</warSourceExcludes>
+					<packagingExcludes>css/${project.build.finalName}.css,js/${project.build.finalName}.js</packagingExcludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.samaxes.maven</groupId>
+				<artifactId>minify-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>default-minify</id>
+						<goals>
+							<goal>minify</goal>
+						</goals>						
+						<configuration>
+							<skipMinify>true</skipMinify>
+							<cssSourceDir>css</cssSourceDir>
+							<cssSourceIncludes>
+								<cssSourceInclude>**</cssSourceInclude>
+							</cssSourceIncludes>
+							<cssSourceExcludes>
+								<cssSourceExclude>**/*.min.css</cssSourceExclude>
+							</cssSourceExcludes>
+							<cssFinalFile>${project.build.finalName}.css</cssFinalFile>
+							<jsSourceDir>js</jsSourceDir>
+							<jsSourceIncludes>
+								<jsSourceInclude>**</jsSourceInclude>
+							</jsSourceIncludes>
+							<jsSourceExcludes>
+								<jsSourceExclude>**/*.min.js</jsSourceExclude>
+							</jsSourceExcludes>
+							<jsFinalFile>${project.build.finalName}.js</jsFinalFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>	
+			-->		
 		</plugins>
 	</build>  
 	
