--- a/armonitor-agent-rs/pom.xml
+++ b/armonitor-agent-rs/pom.xml
@@ -20,8 +20,8 @@
 			<version>${project.version}</version>
 		</dependency>		
 		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
+			<groupId>org.jboss.spec.javax.ws.rs</groupId>
+			<artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>			
