--- a/armonitor-maven-plugin/pom.xml
+++ b/armonitor-maven-plugin/pom.xml
@@ -35,14 +35,17 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+			<scope>compile</scope>
 		</dependency>		
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
