--- a/armonitor-rs/pom.xml
+++ b/armonitor-rs/pom.xml
@@ -15,8 +15,8 @@
 
 	<dependencies>  	
 		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
+			<groupId>org.jboss.spec.javax.ws.rs</groupId>
+			<artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
