--- a/armonitor-bts/pom.xml
+++ b/armonitor-bts/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.lorislab.armonitor</groupId>
 		<artifactId>armonitor</artifactId>
-		<version>0.0.2-SNAPSHOT</version>	
+		<version>0.0.2</version>	
 		<relativePath>../</relativePath>	
 	</parent>
 	
