--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.lorislab.armonitor</groupId>
 	<artifactId>armonitor</artifactId>
 	<packaging>pom</packaging>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,7 +23,7 @@
 		<connection>scm:git:https://github.com/lorislab/armonitor.git</connection>
 		<developerConnection>scm:git:git@github.com:lorislab/armonitor.git</developerConnection>
 		<url>https://github.com/lorislab/armonitor</url>
-		<tag>armonitor-0.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 		
 	<organization>
