--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -85,17 +85,13 @@
 			<artifactId>cdi-api</artifactId>			
 			<scope>provided</scope>
 		</dependency>
-		<!-- JMS -->
+		<!-- MVEL -->	
 		<dependency>
-			<groupId>org.jboss.spec.javax.jms</groupId>
-			<artifactId>jboss-jms-api_1.1_spec</artifactId>
-			<scope>provided</scope>
-		</dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.1.3.Final</version>
+		</dependency>		
 		<!-- MAIL -->
-		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
