--- a/armonitor-web/pom.xml
+++ b/armonitor-web/pom.xml
@@ -112,7 +112,7 @@
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>                
 			</plugin>
-			<!--
+
 			<plugin>
 				<groupId>com.google.code.maven-replacer-plugin</groupId>
 				<artifactId>replacer</artifactId>
@@ -136,8 +136,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warSourceExcludes>lib/**/*.map,lib/**/*.txt,lib/**/*.json,js/*.js,css/*.css,index.html</warSourceExcludes>
-					<packagingExcludes>css/${project.build.finalName}.css,js/${project.build.finalName}.js</packagingExcludes>
+					<warSourceExcludes>lib/angular/i18n/*,lib/**/*.map,lib/**/*.txt,lib/**/*.json,js/*.js,js/admin/**/*.js,css/*.css,index.html</warSourceExcludes>
+					<!--<packagingExcludes>css/${project.build.finalName}.css,js/${project.build.finalName}.js</packagingExcludes>-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -171,7 +171,6 @@
 					</execution>
 				</executions>
 			</plugin>	
-			-->		
 		</plugins>
 	</build>  
 	
